@@ -21,8 +21,6 @@ def route():
     context_menu = list()
     kodi.create_item({'label': i18n('live_channels'), 'path': {'mode': MODES.FOLLOWED, 'content': StreamType.LIVE}, 'context_menu': context_menu,
                       'info': {'plot': '%s - %s' % (i18n('following'), i18n('live_channels'))}})
-    kodi.create_item({'label': i18n('playlists'), 'path': {'mode': MODES.FOLLOWED, 'content': StreamType.PLAYLIST},
-                      'info': {'plot': '%s - %s' % (i18n('following'), i18n('playlists'))}})
     context_menu = list()
     context_menu.extend(menu_items.change_sort_by('followed_channels'))
     context_menu.extend(menu_items.change_direction('followed_channels'))
