@@ -1,6 +1,7 @@
 2.4.8
 [fix] sort by viewers for followed live channels, restoring previous behavior
 [fix] menu settings not taking effect
+[rem] remove Playlists
 
 2.4.7
 [fix] remaining private api calls ie. following games, toggle following games
